Added test covarege for validation method, corrected response on cli protobuf
